--- a/app/views/caseaccess/pages/myaccess-tcrvd.html
+++ b/app/views/caseaccess/pages/myaccess-tcrvd.html
@@ -114,7 +114,7 @@ Case details
                 <td class="govuk-table__cell">DD/MM/YYYY </td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Purpose for access</th>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Request for access</th>
                 <td class="govuk-table__cell">Purpose A (Example: Reviewer)<br>I need to gain access to support the case I'm deciding.</td>
               </tr>
               <tr class="govuk-table__row">
@@ -126,7 +126,7 @@ Case details
                 <td class="govuk-table__cell">DD/MM/YYYY </td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Purpose for rejection</th>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for rejection</th>
                 <td class="govuk-table__cell">
 Insufficient ground for access supplied. <br>Please contact me to discuss further.         </tr>
             </tbody>
