--- a/app/views/workallocation/pages/wa-PA-00321-2018-a.html
+++ b/app/views/workallocation/pages/wa-PA-00321-2018-a.html
@@ -165,7 +165,7 @@ classes: "govuk-tag--grey"
                   Next steps
                 </dt>
                 <dd class="govuk-summary-list__value">
-                  <a href="#">Review application decision</a>
+                  <a href="/workallocation/pages/wa-PA-00321-2018-app">Review application decision</a>
                 </dd>
               </div>
             </dl>
