--- a/app/views/workallocation/pages/wa-available-tasks.html
+++ b/app/views/workallocation/pages/wa-available-tasks.html
@@ -43,7 +43,7 @@ My work
         </li>
       </ul>
     </nav>
-    <p class="govuk-body">Displaying <strong>20</strong> of <strong>260</strong> tasks</p>
+    <p class="govuk-body">Displaying <strong>4</strong> of <strong>4</strong> tasks</p>
     <table class="govuk-table ">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
@@ -70,7 +70,7 @@ text: "dd/mm/yyyy",
 classes: "govuk-tag--red"
 })}} </td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
         <tr class="govuk-table__row">
 
@@ -121,253 +121,10 @@ classes: "govuk-tag--grey"
         </tr>
 
 
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Firstname Lastname</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Value</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-
       </tbody>
     </table>
 
 
-
-
-
-    <nav class="hmcts-pagination" id="pagination-label">
-
-    <p class="govuk-visually-hidden" aria-labelledby="pagination-label">Pagination navigation</p>
-
-    <ul class="hmcts-pagination__list">
-
-    <li class="hmcts-pagination__item  hmcts-pagination__item--prev">
-      <a class="hmcts-pagination__link" href="">Previous<span class="govuk-visually-hidden"> set of pages</span></a>
-    </li>
-
-    <li class="hmcts-pagination__item"><a class="hmcts-pagination__link" href="/page=1">1</a></li>
-
-    <li class="hmcts-pagination__item hmcts-pagination__item--dots">...</li>
-
-    <li class="hmcts-pagination__item"><a class="hmcts-pagination__link" href="/page=5">5</a></li>
-
-    <li class="hmcts-pagination__item hmcts-pagination__item--active">6</li>
-
-    <li class="hmcts-pagination__item"><a class="hmcts-pagination__link" href="/page=7">7</a></li>
-
-    <li class="hmcts-pagination__item hmcts-pagination__item--dots">...</li>
-
-    <li class="hmcts-pagination__item"><a class="hmcts-pagination__link" href="/page=10">10</a></li>
-
-    <li class="hmcts-pagination__item  hmcts-pagination__item--next">
-      <a class="hmcts-pagination__link" href="">Next<span class="govuk-visually-hidden"> set of pages</span></a>
-    </li>
-
-    </ul>
-
-    </nav>
 
 
     {% endblock %}
