--- a/app/views/searchcases/layoutjudicial.html
+++ b/app/views/searchcases/layoutjudicial.html
@@ -56,19 +56,21 @@
                         </nav>
                     </div>
                 </div>
+
                 <div  style="background-color: #8d100e">
                     <div style=" display: flex; margin: 0 auto; background-color: #8d100e; ">
+
                         <div>
-                            <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style="background-color: #8d100e; width: 697px;">
+                            <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style="background-color: #8d100e; width: 500px;">
                                 <ul class="hmcts-primary-navigation__list">
                                     <li class="hmcts-primary-navigation__item">
-                                        <a class="hmcts-primary-navigation__link" href="/searchcases/pages/caselist">
-                                            Your cases
+                                        <a class="hmcts-primary-navigation__link" href="#">
+                                            My work
                                         </a>
                                     </li>
                                     <li class="hmcts-primary-navigation__item">
                                         <a class="hmcts-primary-navigation__link" href="#">
-                                            Manage tasks and cases
+                                            All work
                                         </a>
                                     </li>
                                     <li class="hmcts-primary-navigation__item">
@@ -79,16 +81,24 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div style="display: flex;flex-direction: row; ">
-                            <p style="color: white; margin-top:8px; margin-bottom: 0px;">Case reference:  &nbsp;</p>
+
+                        <div style="display: flex; flex-grow: 1;">
+                        </div>
+
+                        <div style="display: flex; flex-direction: row; ">
+                            <p style="color: white; margin-top:8px; margin-bottom: 0px;">16-digit case reference:  &nbsp;</p>
                             <input class="govuk-input" id="hmctsref" name="hmctsref" type="text" spellcheck="false" style="width:219px;">
                             <a href="/opencase" role="button" draggable="false" class="govuk-button govuk-button--secondary"
                                style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
                                 Find
                             </a>
                         </div>
+
                     </div>
                 </div>
+
+
+
             </div>
         </div>
     </header>
