--- a/app/views/caseaccess/pages/available-tasks-s2o.html
+++ b/app/views/caseaccess/pages/available-tasks-s2o.html
@@ -70,7 +70,7 @@ My work
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="available-tasks-s2" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
-                    <td colspan="7" class="govuk-table__cell right"><a href="PA-00467-2017-tr" class="right_l">Assign to me and go to task</a></td>
+                    <td colspan="7" class="govuk-table__cell right"><a href="PA-00467-2017-t" class="right_l">Assign to me and go to task</a></td>
                 </tr>
                 <tr class="govuk-table__row">
 
