--- a/app/views/caseaccess/pages/PA-00467-2017-tr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr.html
@@ -8,7 +8,7 @@ Case details
 {% endblock %}
 
 {% block content %}
-<div class="hmcts-banner hmcts-banner--success">
+<!-- <div class="hmcts-banner hmcts-banner--success">
 
 <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
 <path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" /></svg>
@@ -17,7 +17,7 @@ Case details
 <span class="hmcts-banner__assistive">Success</span>
 You've assigned yourself a task.
 </div>
-</div>
+</div> -->
 <!-- <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
     <div> -->
