--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -43,6 +43,8 @@ GOV.UK Prototype Kit
         <div class="govuk-!-padding-bottom-6"></div>
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Available tasks - tab</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-o?usertype=judiciary&">Available tasks - Assign task</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-a?usertype=judiciary&">Available tasks - Assigned to me</a><br></p>
+
 
         <!-- SECTION BREAK -->
       </div>
