--- a/app/views/caseaccess/pages/PA-00467-2017-ta.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-ta.html
@@ -150,7 +150,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
                 Next steps
               </dt>
               <dd class="govuk-summary-list__value">
-                <a href="PA-00467-2017-tr">Review specific access request</a>
+                <a href="PA-00467-2017-tr-case">Review specific access request</a>
               </dd>
             </div>
           </dl>
