--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Case access prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (19/3/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
+      Last updated (22/3/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
     </h2>
     <div style="display: flex; margin-top: 80px;">
       <div style="width: 800px;">
@@ -150,16 +150,16 @@ GOV.UK Prototype Kit
 -->
           <!-- SECTION BREAK -->
 
+
           <h2 class="govuk-heading-m">(APPROVER) Approve Specifc access request <br> from AVAILABLE TASKS</h2>
           <h3 class="govuk-heading-s">Scenario C - Part 1a - Grant request Specific Access to case</h3>
           <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=staff&">Available tasks</a><br>Specifc access - Flow approve</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=staff&">Review specific access request</a><br>Specifc access - Flow approve</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra?usertype=staff&">Grant duration of case access
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Active tasks</a><br>Assign to me - Specifc access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=staff&">Assigned</a><br>Specifc access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&"">Review specific access request</a><br>Specifc access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=staff&">Grant duration of case access
             </a><br>Specifc access - Flow approve</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac?usertype=staff&">Access approved</a><br>Specifc access - Flow approve</p>
-          <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p> -->
-
-          <!-- SECTION BREAK -->
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=staff&">Access approved</a><br>Specifc access - Flow approve</p>
 
           <!-- SECTION BREAK -->
 
