--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -21,6 +21,7 @@ GOV.UK Prototype Kit
         <!-- SECTION BREAK -->
 
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks?usertype=judiciary&">My tasks - tab</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-mytasks-rs?usertype=judiciary&">My tasks - tab - Reset sorting</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-o?usertype=judiciary&">My tasks - open - Go to tasks</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018?usertype=judiciary&">Active tasks</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-a?usertype=judiciary&">Active tasks - Assign task to me</a><br></p>
@@ -45,7 +46,12 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Available tasks - tab</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-o?usertype=judiciary&">Available tasks - Assign task</a><br></p>
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-a?usertype=judiciary&">Available tasks - Assigned to me</a><br></p>
-
+        <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ao?usertype=judiciary&">My tasks - Unassign</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/lms?usertype=judiciary&">Unassign task - Unassign</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-mytasks-u?usertype=judiciary&">Unassigned task - Unassign</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/reassign?usertype=judiciary&">Reassign task - Find the judge</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=judiciary&">Reassign task - Check your changes</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-mytasks-r?usertype=judiciary&">My task - Reassigned</a><br></p>
 
         <!-- SECTION BREAK -->
       </div>
