--- a/app/views/workallocation/pages/wa-mytasks-u.html
+++ b/app/views/workallocation/pages/wa-mytasks-u.html
@@ -7,6 +7,15 @@
 My work
 {% endblock %}
 {% block content %}
+<div class="hmcts-banner hmcts-banner--success">
+  <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
+    <path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" />
+  </svg>
+  <div class="hmcts-banner__message">
+    <span class="hmcts-banner__assistive">Success</span>
+    You've unassigned yourself a task. It's now in Available tasks.
+  </div>
+</div>
 <div class="hmcts-page-heading">
   <div class="hmcts-page-heading__title">
     <h1 class="govuk-heading-xl">My work</h1>
