--- a/app/views/caseaccess/pages/available-tasks-s2o.html
+++ b/app/views/caseaccess/pages/available-tasks-s2o.html
@@ -69,7 +69,7 @@ My work
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="available-tasks-s2" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
-                    <td colspan="7" class="govuk-table__cell right"><a href="#" class="right">Assign to me</a><a href="PA-00467-2017-t" class="right_l">Go to task</a></td>
+                    <td colspan="7" class="govuk-table__cell right"><a href="#" class="right">Assign to me</a><a href="PA-00467-2017-t" class="right_l">Go to tasks</a></td>
                 </tr>
                 <tr class="govuk-table__row">
 
