--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -54,6 +54,28 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-r?usertype=judiciary&">My task - Reassigned</a><br></p>
 
         <!-- SECTION BREAK -->
+
+        <h2 class="govuk-heading-l">Allocate a specific role from a task</h2>
+        <div class="xui-alert-link__number">4 </div>
+        <div class="govuk-!-padding-bottom-6"></div>
+        <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Available tasks - tab</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-o?usertype=judiciary&">Available tasks - Go to tasks</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-t?usertype=judiciary&">Active tasks</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar?usertype=judiciary&">Roles / access</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ar?usertype=judiciary&">Roles / access - Allocate a role</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj?usertype=judiciary&">Roles / access - Allocate a judicial role</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajh?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajha?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Allocate to another judge</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajchk?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - Allocate to another judge - Check details</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp?usertype=judiciary&">Roles / access - Allocate a judicial role - Hearing judge - confirmation</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp-o?usertype=judiciary&">Roles / access - Rellocate</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-real?usertype=judiciary&">Roles / access - Rellocate role</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-real-chk?usertype=judiciary&">Roles / access - Rellocate role - check changes</a><br></p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arj-re?usertype=judiciary&">Roles / access - Rellocate - rellocated</a><br></p>
+
+
+
+
       </div>
     </div>
   </div>
