--- a/app/views/workallocation/pages/wa-available-tasks-o.html
+++ b/app/views/workallocation/pages/wa-available-tasks-o.html
@@ -75,7 +75,7 @@ classes: "govuk-tag--red"
 
         <tr class="govuk-table__row">
 
-          <td colspan="7" class="right"> <a href="/workallocation/pages/wa-available-tasks-a" class="right">Assign to me</a> <a href="#" class="right_tl">Go to case</a></td>
+          <td colspan="7" class="right"> <a href="/workallocation/pages/wa-available-tasks-a" class="right">Assign to me</a> <a href="wa-PA-00467-2017-t" class="right_tl">Go to tasks</a></td>
         </tr>
         <tr class="govuk-table__row">
 
