--- a/app/views/caseaccess/pages/PA-00467-2017-tca.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tca.html
@@ -104,7 +104,7 @@ classes: "govuk-tag--grey"
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Manage</th>
-                <td class="govuk-table__cell"><a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a> <a href="">Refer a task</a> </td>
+                <td class="govuk-table__cell"><a href="" class="right">Reassign task</a> <a href="" class="right">Unassign task</a>  </td>
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header">Next steps</th>
