--- a/app/views/workallocation/pages/wa-PA-00467-2017-ta.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ta.html
@@ -105,7 +105,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
       classes: "govuk-tag--grey"
       })}}</span></p>
           <dl class="govuk-summary-list govuk-summary-list--no-border">
-            <div class="govuk-summary-list__row">
+    <!--        <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Request from
               </dt>
@@ -128,7 +128,7 @@ Review specific access request</strong> <span class="hmcts-badge_right">{{govukT
               <dd class="govuk-summary-list__value">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ultrices enim in egestas porttitor. Vivamus iaculis ex eu dolor feugiat elementum. Nunc id laoreet elit. In hac habitasse platea dictumst
               </dd>
-            </div>
+            </div> -->
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Assigned to
